syntax = "proto3";

package contact.pb;

message Contact {
    bytes   id = 1;
    string  name = 2;
    string  avatar = 3;
    bytes   depositAddress = 4;
    ContactState   state = 5;
    int64   createTime = 6;
    int64   accessTime = 7;
}

enum ContactState {
    None = 0;
    Apply = 1;
    Normal = 2;
}

message ContactPeer {
    bytes   id = 1;
    string  name = 2;
    string  avatar = 3;
    bytes   depositAddress = 4;
}

message ContactPeerState {
    bytes   id = 1;
    string  name = 2;
    string  avatar = 3;
    bytes   depositAddress = 4;
    ContactState   state = 5;
}